securitygroup.tf
resource "aws_security_group" "ecs-securitygroup" {
    vpc_id = "${aws_vpc.main.id}"
    name = "ecs"
    description = "security group for ecs"
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 4200
        to_port         = 4200
        protocol        = "tcp"
        security_groups = ["${aws_security_group.myapp-elb-securitygroup.id}"]
    } 
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
	from_port = 8080
	to_port   = 8080
        protocol  = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
	from_port = 27017
        to_port   = 27017
        protocol  = "tcp"
	cidr_blocks = ["0.0.0.0/0"]
    } 
    tags = {
	Name = "ecs"
    }
}
resource "aws_security_group" "myapp-elb-securitygroup" {
    vpc_id = "${aws_vpc.main.id}"
    name = "myapp-elb"
    description = "security group for ecs"
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    } 
    tags = {
	Name = "myapp-elb"
  }
}
